k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-depl
  namespace: express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - name: express
          image: hosnibounechada/express
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: express-srv
  namespace: express
spec:
  selector:
    app: express
  ports:
    - name: express
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress-srv
  namespace: express
  annotations:
      cert-manager.io/issuer: express-letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - express.lastingdynamicslibrary.xyz
      secretName: express-staging-tls-secret
  rules:
    - host: express.lastingdynamicslibrary.xyz
      http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: express-srv
                port:
                  number: 3000
